--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <div class="container-lg py-6">
       <div class="clearfix gutter-md-spacious">
         <div class="float-left col-md-4">
-          <img class="width-full" src="me.jpg" alt="Nat Friedman">
+          <img class="width-full" src="server.jpg" alt="server">
         </div>
         <div class="float-left col-md-8">
           <div class="markdown-body">
